--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <title>Tika | Inicio</title>
 </head>
 <body>
-    <b>Tika :D</b>
+    <ul>
+        <li><a class="active" href="#home">Home</a></li>
+        <li><a href="https://discord.com/oauth2/authorize?client_id=796087924398882836&scope=bot&permissions=8">Invite to your server</a></li>
+        <li><a href="#contact">Contact us</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="https://discord.gg/qzAuMq3Wcp">Support server</a></li>
+    </ul>
+
+    <section id="home"></section>
 </body>
 </html>
